<resources>
    <string name="app_name">ui</string>
    <!--键盘-->
    <string name="custom_password_0">0</string>
    <string name="custom_password_1">1</string>
    <string name="custom_password_2">2</string>
    <string name="custom_password_3">3</string>
    <string name="custom_password_4">4</string>
    <string name="custom_password_5">5</string>
    <string name="custom_password_6">6</string>
    <string name="custom_password_7">7</string>
    <string name="custom_password_8">8</string>
    <string name="custom_password_9">9</string>
    <string name="custom_password_x">X</string>
    <string name="custom_password_dot">.</string>

    <string name="shape_loading_text_view">玩命加载中&#8230;</string>
    <!--多状态布局-->
    <string name="empty_view_hint">暂时木有内容呀~~</string>
    <string name="data_error">数据获取失败(ㄒoㄒ)~~</string>
    <string name="loading_text">加载中&#8230;</string>
    <string name="no_network">请检查网络后点击重新加载</string>

    <!--图片选择框架-->
    <string name="ui_picture_error">图片已损坏</string>
    <string name="ui_picture_video_error">视频已损坏</string>
    <string name="ui_picture_audio_error">音频已损坏</string>
    <string name="ui_picture_all_audio">所有音频</string>
    <string name="ui_picture_camera_roll">相机胶卷</string>
    <string name="ui_picture_cancel">取消</string>
    <string name="ui_picture_preview">预览</string>
    <string name="ui_picture_please_select">请选择</string>
    <string name="ui_picture_empty">你可以使用相机拍摄照片或视频</string>
    <string name="ui_picture_take_picture">拍摄</string>
    <string name="ui_picture_message_max_num">你最多可以选择%1$d个图片和文件</string>
    <string name="ui_picture_completed">完成</string>
    <string name="ui_media_choose_ok">确定</string>
    <string name="ui_media_choose_only_single">不支持多选</string>
    <string name="ui_media_choose_preview">预览</string>
    <string name="ui_media_chooser_hint">支持选取最短4s最长10min</string>
    <string name="ui_files_numbers">文件：%1$s</string>
    <string name="ui_format_file_size">大小：%1$s</string>
    <string name="ui_please_select">请选择</string>
    <string name="ui_take_photo">拍照</string>
</resources>
