<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EBEBEB"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/custom_keyboard_text_style"
            android:text="@string/custom_password_1" />

        <TextView
            style="@style/custom_keyboard_text_style"
            android:text="@string/custom_password_2" />

        <TextView
            style="@style/custom_keyboard_text_style"
            android:text="@string/custom_password_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_1">

        <TextView
            style="@style/custom_keyboard_text_style"
            android:text="@string/custom_password_4" />

        <TextView
            style="@style/custom_keyboard_text_style"
            android:text="@string/custom_password_5" />

        <TextView
            style="@style/custom_keyboard_text_style"
            android:text="@string/custom_password_6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_1">

        <TextView
            style="@style/custom_keyboard_text_style"
            android:text="@string/custom_password_7" />

        <TextView
            style="@style/custom_keyboard_text_style"
            android:text="@string/custom_password_8" />

        <TextView
            style="@style/custom_keyboard_text_style"
            android:text="@string/custom_password_9" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_keyboard_hide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/dimen_1"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:padding="@dimen/dimen_18"
            tools:visibility="gone"

            android:src="@drawable/ic_keyboard_hide" />

        <TextView
            android:id="@+id/tv_custom_keyboard_x"
            style="@style/custom_keyboard_text_style"
            android:text="@string/custom_password_x"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            style="@style/custom_keyboard_text_style"
            android:text="@string/custom_password_0" />

        <ImageView
            android:id="@+id/iv_keyboard_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:padding="@dimen/dimen_18"
            android:scaleType="centerInside"
            android:src="@drawable/ic_customer_keyboard_delete" />
    </LinearLayout>
</LinearLayout>
